# vin_extract

./: README.md  env_ollama  pyproject.toml  report.md
knowledge/: user_preference.txt
src/vin_extract/: crew.py  main.py
src/vin_extract/config/: agents.yaml  tasks.yaml
src/vin_extract/tools/: custom_tool.py  vin_tool.py
