[project]
name = "vin_extract"
version = "0.1.0"
description = "vin_extract using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.100.1,<1.0.0"
]

[project.scripts]
vin_extract = "vin_extract.main:run"
run_crew = "vin_extract.main:run"
train = "vin_extract.main:train"
replay = "vin_extract.main:replay"
test = "vin_extract.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
